--- a/Twitter-Client/package.json
+++ b/Twitter-Client/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"yarn run codegen\" next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts --watch --verbose"
   },
   "dependencies": {
+    "@graphql-tools/load": "^8.0.2",
+    "@react-oauth/google": "^0.12.1",
+    "concurrently": "^8.2.2",
+    "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
@@ -16,6 +22,10 @@
     "twitter-client": "file:"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/client-preset": "^4.3.3",
+    "@graphql-codegen/introspection": "4.0.3",
+    "@parcel/watcher": "^2.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -23,6 +33,6 @@
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
