--- a/Twitter-Client/package.json
+++ b/Twitter-Client/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@graphql-tools/load": "^8.0.2",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.54.1",
+    "@tanstack/react-query-devtools": "^5.54.1",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
     "twitter-client": "file:"
   },
   "devDependencies": {
