--- a/Twitter-Server/package.json
+++ b/Twitter-Server/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@apollo/server": "^4.11.0",
     "@prisma/client": "^5.19.1",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
