--- a/Twitter-Client/package.json
+++ b/Twitter-Client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@graphql-tools/load": "^8.0.2",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.54.1",
