--- a/Twitter-Client/package.json
+++ b/Twitter-Client/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.54.1",
+    "axios": "^1.7.7",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "graphql": "^16.9.0",
