--- a/Twitter-Server/package.json
+++ b/Twitter-Server/package.json
@@ -5,14 +5,19 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/s3-request-presigner": "^3.645.0",
     "@prisma/client": "^5.19.1",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "@upstash/redis": "^1.34.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwt": "^0.2.0",
     "postgres": "^3.4.4",
